# visible-ideas-homework

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile
src/: manage.py
src/apps/api/: urls.py  views.py
src/apps/crawler/: exceptions.py  services.py  urls.py  views.py
src/site/css/: base.css
src/templates/: base.html  index.html
src/visible_ideas_homework/: asgi.py  settings.py  urls.py  wsgi.py
